Image sizes corrected

--- a/src/drop-off-duty.html
+++ b/src/drop-off-duty.html
@@ -11,11 +11,11 @@
         .hero { background: #007bff; color: white; padding: 40px 20px; }
         .hero h1 { margin: 0; font-size: 2.5em; }
         .section { padding: 40px 20px; background: white; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); margin-bottom: 20px; }
-        .project img { display: block; margin: 10px auto; height: 200px; width: auto; border-radius: 10px; }
+        .project img { display: block; margin: 10px auto; height: auto; width: auto; max-width: 100%; max-height: 200px; border-radius: 10px; }
         .contributions { text-align: left; margin-top: 20px; }
         .contributions h2 { border-bottom: 3px solid #007bff; display: inline-block; padding-bottom: 5px; }
         .contributions ul { list-style-type: disc; padding-left: 20px; }
-        .contributions img { display: block; margin: 10px auto; height: 200px; width: auto; border-radius: 10px; border: 3px solid #000; }
+        .contributions img { display: block; margin: 10px auto; height: auto; width: auto; max-width: 100%; max-height: 400px; border-radius: 10px; border: 3px solid #000; }
         .back-link { margin-top: 20px; }
         .back-link a { text-decoration: none; color: #007bff; font-weight: bold; }
         .back-link a:hover { text-decoration: underline; }
