--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         .hero { background: #007bff; color: white; padding: 60px 20px; }
         .hero h1 { margin: 0; font-size: 2.5em; }
         .section { padding: 40px 20px; }
-        .project { width: 70%; margin: 0 auto 60px auto; padding: 20px; background: white; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
+        .project { width: 800px; max-width: 70%; margin: 0 auto 60px auto; padding: 20px; background: white; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
         .project h3 { border-bottom: 3px solid #007bff; display: inline-block; padding-bottom: 5px; }
         .project h3 a { text-decoration: none; color: #007bff; }
         .project h3 a:hover { text-decoration: underline; }
-        .project img { display: block; margin: 10px auto; height: 200px; width: auto; border-radius: 10px; }
+        .project img { display: block; margin: 10px auto; height: auto; width: auto; max-width: 100%; max-height: 200px; border-radius: 10px; }
         .project-description { font-size: 1em; color: #333; margin-bottom: 20px; }
         .contact p { margin: 5px 0; }
     </style>
