--- a/src/zima-polaris.html
+++ b/src/zima-polaris.html
@@ -15,7 +15,7 @@
         .contributions { text-align: left; margin-top: 20px; }
         .contributions h2 { border-bottom: 3px solid #007bff; display: inline-block; padding-bottom: 5px; }
         .contributions ul { list-style-type: disc; padding-left: 20px; }
-        .contributions img { display: block; margin: 10px auto; height: 200px; width: auto; border-radius: 10px; border: 3px solid #000; }
+        .contributions img { display: block; margin: 10px auto; height: 200px; width: auto; max-width: 100%; border-radius: 10px; border: 3px solid #000; }
         .back-link { margin-top: 20px; }
         .back-link a { text-decoration: none; color: #007bff; font-weight: bold; }
         .back-link a:hover { text-decoration: underline; }
