--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body { font-family: 'Poppins', sans-serif; margin: 0; padding: 0; text-align: center; background: #f4f4f4; }
         .container { width: 100%; margin: auto; padding: 20px; }
-        .hero { background: #007bff; color: white; padding: 60px 20px; }
+        .hero { background: #007bff; color: white; padding: 60px 20px; width: 100%; }
         .hero h1 { margin: 0; font-size: 2.5em; }
         .section { padding: 40px 20px; }
         .project { width: 800px; max-width: 70%; margin: 0 auto 60px auto; padding: 20px; background: white; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
