Added info about projects

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Oihan Abruña - Portfolio</title>
+    <link rel="icon" href="images/icons/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Poppins', sans-serif; margin: 0; padding: 0; text-align: center; background: #f4f4f4; }
@@ -40,6 +41,11 @@
                 <h3><a href="src/zima-polaris.html">Zima Polaris</a></h3>
                 <img src="images/Zima Polaris/ZimaPolaris.png" alt="Zima Polaris Screenshot">
                 <p class="project-description">2D platform, adventure, and puzzle video game.</p>
+            </div>
+
+            <div class="project">
+                <h3><a href="src/acc-structs.html">Acceleration structures</a></h3>
+                <img src="images/dflt.png" alt="gAccStructs Screenshot">
             </div>
         </div>
         
