--- a/src/acc-structs.html
+++ b/src/acc-structs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zima Polaris</title>
+    <title>Acceleration structures</title>
     <link rel="icon" href="../images/icons/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
@@ -135,28 +135,31 @@
 </head>
 <body>
     <div class="hero">
-        <h1>Zima Polaris</h1>
-        <p>2D platform, adventure, and puzzle video game.</p>
+        <h1>Acceleration structures</h1>
     </div>
 
     <div class="container">
 
+        <div class="tech-used">
+            <h3 style="margin-top: 0;">Technology Used</h3>
+            <div class="tech-icons">
+                <img src="../images/icons/cpp.png" alt="C++">
+                <img src="../images/icons/opengl.png" alt="OpenGL">
+            </div>
+        </div>
+
         <div class="section engine-section">
-            <h2>Editor tool</h2>
+            <h2>Bounding Volume Hierarchy</h2>
+            <img class="contribution-img" src="../images/dflt.png" alt="BVH Screenshot">
+        </div>
 
-            <div class="tech-used">
-                <h3 style="margin-top: 0;">Technology Used</h3>
-                <div class="tech-icons">
-                    <img src="../images/icons/cpp.png" alt="C++">
-                    <span class="tech-badge">Dear ImGui</span>
-                </div>
-            </div>
+        <div class="section engine-section">
+            <h2>Octree</h2>
+            <img class="contribution-img" src="../images/dflt.png" alt="BVH Screenshot">
+        </div>
 
-            <div class="subsection">
-                <h3>2D custom mesh creation tool</h3>
-                <img class="contribution-img" src="../images/dflt.png" alt="2D mesh creation tool Screenshot">
-            </div>
-
+        <div class="section engine-section">
+            <h2>Uniform Grid</h2>
         </div>
 
         <div class="back-link">
