--- a/src/drop-off-duty.html
+++ b/src/drop-off-duty.html
@@ -163,7 +163,8 @@
                 <h3>Shaders and Visual Effects</h3>
                 <p>Developed custom GLSL shaders to simulate grass and water effects.</p>
                 <img class="contribution-img" src="../images/Drop-Off Duty/Grass.png" alt="Grass shader Screenshot">
-                <img class="contribution-img" src="../images/Drop-Off Duty/Water.png" alt="Water shader Screenshot">
+                <img class="contribution-img" src="../images/Drop-Off Duty/Water.gif" alt="Water shader Animation">
+                <img class="contribution-img" src="../images/Drop-Off Duty/Water2.gif" alt="Water shader Animation">
             </div>
 
             <div class="subsection">
