--- a/index.html
+++ b/index.html
@@ -44,9 +44,20 @@
             </div>
 
             <div class="project">
-                <h3><a href="src/acc-structs.html">Acceleration structures</a></h3>
-                <img src="images/dflt.png" alt="gAccStructs Screenshot">
+                <h3><a href="src/acc-structs.html">Acceleration data structures</a></h3>
+                <img src="images/dflt.png" alt="AccStructs Screenshot">
             </div>
+
+            <div class="project">
+                <h3><a href="src/model-inspector.html">Model inspector (Vulkan)</a></h3>
+                <img src="images/dflt.png" alt="ModelInspectorScreenshot">
+            </div>
+
+            <div class="project">
+                <h3><a href="src/side-channel-trace-viewer.html">Side channel trace viewer</a></h3>
+                <img src="images/dflt.png" alt="SideChannelTraceViewer Screenshot">
+            </div>
+
         </div>
         
         <div class="section contact">
