--- a/src/drop-off-duty.html
+++ b/src/drop-off-duty.html
@@ -6,131 +6,8 @@
     <title>Drop-Off Duty</title>
     <link rel="icon" href="../images/icons/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/style.css">
     <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            background: #f4f4f4;
-        }
-
-        .container {
-            width: 80%;
-            margin: auto;
-            padding: 20px;
-        }
-
-        .hero {
-            background: #007bff;
-            color: white;
-            padding: 40px 20px;
-            width: 100%;
-        }
-
-        .hero h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
-
-        .section {
-            padding: 40px 20px;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            margin-bottom: 20px;
-        }
-
-        .project img {
-            display: block;
-            margin: 10px auto;
-            height: auto;
-            width: auto;
-            max-width: 100%;
-            max-height: 200px;
-            border-radius: 10px;
-        }
-
-        .section h2 {
-            border-bottom: 3px solid #007bff;
-            display: inline-block;
-            padding-bottom: 5px;
-            margin-bottom: 20px;
-        }
-
-        .contributions, .tech-used, .engine-section {
-            text-align: left;
-            margin-top: 20px;
-        }
-
-        ul {
-            list-style-type: disc;
-            padding-left: 20px;
-        }
-
-        img.contribution-img {
-            display: block;
-            margin: 10px auto;
-            height: auto;
-            width: auto;
-            max-width: 100%;
-            max-height: 400px;
-            border: 6px solid #000;
-        }
-
-        .tech-icons {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            justify-content: center;
-            align-items: center;
-            margin-top: 15px;
-        }
-
-        .tech-icons img {
-            height: 40px;
-            width: auto;
-        }
-
-        .tech-badge {
-            background-color: #333;
-            color: white;
-            font-weight: bold;
-            padding: 8px 12px;
-            border-radius: 8px;
-            font-size: 14px;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        .subsection {
-            margin-top: 30px;
-            padding: 20px;
-            background-color: #f9f9f9;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-        }
-
-        .subsection h3 {
-            color: #007bff;
-            font-size: 1.4em;
-            margin-bottom: 10px;
-            border-bottom: 2px solid #007bff;
-            padding-bottom: 4px;
-        }
-
-        .back-link {
-            margin-top: 20px;
-        }
-
-        .back-link a {
-            text-decoration: none;
-            color: #007bff;
-            font-weight: bold;
-        }
-
-        .back-link a:hover {
-            text-decoration: underline;
-        }
 
         .g-buffer-grid {
             display: grid;
@@ -178,87 +55,6 @@
             font-size: 14px;
             font-weight: 600;
             color: #333;
-        }
-
-        .image-slider-section {
-            width: 100%;
-            max-width: 600px;
-            text-align: center;
-            margin: 20px auto;
-        }
-
-        .image-slider {
-            position: relative;
-            width: 100%;
-            max-width: 600px;
-        }
-
-        .slider-images {
-            position: relative;
-            width: 100%;
-        }
-
-        .slider-image {
-            width: 100%;
-            max-height: 400px;
-            display: block;
-            position: absolute;
-            top: 0;
-            left: 0;
-            object-fit: cover;
-        }
-
-        .slider-image:first-child {
-            position: relative;
-            z-index: 1;
-        }
-
-        .slider-control {
-            width: 100%;
-            margin-top: 10px;
-            appearance: none;
-            height: 8px;
-            background: #ddd;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .slider-control:focus {
-            outline: none;
-        }
-
-        .slider-control::-webkit-slider-thumb {
-            appearance: none;
-            width: 20px;
-            height: 20px;
-            background: #007bff;
-            border-radius: 50%;
-            cursor: pointer;
-        }
-        
-        .second-image-wrapper {
-           position: absolute;
-           top: 0;
-           left: 0;
-           height: 100%;
-           width: 100%;
-           z-index: 2;
-           clip-path: inset(0 50% 0 0); /* Initial state */
-           pointer-events: none;
-        }
-
-        .second-image {
-            width: 100%;
-        }
-
-        .slider-divider {
-           position: absolute;
-           top: 0;
-           right: 0;
-           width: 2px;
-           height: 100%;
-           background-color: #007bff;
-           z-index: 3;
         }
 
     </style>
