Correction for mobiles

--- a/index.html
+++ b/index.html
@@ -192,6 +192,27 @@
       height: 25px;
       opacity: 0.7;
     }
+
+    /* --- Mobile fixes for projects and Others label --- */
+    @media (max-width: 480px) {
+      .projects-list {
+        max-width: 100%;
+        padding: 0 10px;
+      }
+      .projects-list a {
+        font-size: 1.1em;
+        width: 100%;
+        text-align: left;
+        margin: 8px 0;
+        word-break: break-word;
+      }
+      .project-section-label {
+        font-size: 1em;
+        text-align: left;
+        margin-left: 10px;
+        margin-top: 16px;
+      }
+    }
   </style>
 </head>
 <body>
