--- a/index.html
+++ b/index.html
@@ -193,24 +193,25 @@
       opacity: 0.7;
     }
 
-    /* --- Mobile fixes for projects and Others label --- */
+    /* --- Mobile fixes for projects and Secondary label --- */
     @media (max-width: 480px) {
-      .projects-list {
-        max-width: 100%;
-        padding: 0 10px;
-      }
       .projects-list a {
-        font-size: 1.1em;
-        width: 100%;
+        font-size: 0.85em;           /* smaller than category */
+        width: auto;                /* don't stretch full width */
+        margin: 4px 0;
+        display: inline-block;      /* keep inline style */
         text-align: left;
-        margin: 8px 0;
+        max-width: 90%;
         word-break: break-word;
       }
       .project-section-label {
-        font-size: 1em;
+        font-size: 0.9em;           /* smaller than category name */
         text-align: left;
-        margin-left: 10px;
-        margin-top: 16px;
+        margin-left: 12px;
+        margin-top: 14px;
+        margin-bottom: 4px;
+        font-weight: 500;
+        opacity: 0.8;
       }
     }
   </style>
