--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -33,10 +33,10 @@
     }
 
     .projects-header {
-      position: relative;
-      width: 100%;
-      margin: 1em 0 0.5em;
-      text-align: center;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      margin: 1em auto 0.5em;
     }
 
     .projects-text {
@@ -58,26 +58,27 @@
     }
 
     .arrow-icon {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      right: calc(41%);
+      position: static;
+      margin-left: 8px;
       width: 24px;
       height: 24px;
       transition: transform 0.3s ease;
       cursor: pointer;
+      transform-origin: center;
+      display: inline-block;
+      vertical-align: middle;
     }
 
     .arrow-icon:hover {
-      transform: translateY(-50%) scale(1.6);
+      transform: scale(1.6);
     }
 
     .arrow-icon.rotated {
-      transform: translateY(-50%) rotate(90deg);
+      transform: rotate(90deg);
     }
 
     .arrow-icon.rotated:hover {
-      transform: translateY(-50%) rotate(90deg) scale(1.6);
+      transform: rotate(90deg) scale(1.6);
     }
 
     .arrow-icon:focus {
@@ -191,28 +192,6 @@
     .tech-icons.learning img {
       height: 25px;
       opacity: 0.7;
-    }
-
-    /* --- Mobile fixes for projects and Secondary label --- */
-    @media (max-width: 480px) {
-      .projects-list a {
-        font-size: 0.85em;           /* smaller than category */
-        width: auto;                /* don't stretch full width */
-        margin: 4px 0;
-        display: inline-block;      /* keep inline style */
-        text-align: left;
-        max-width: 90%;
-        word-break: break-word;
-      }
-      .project-section-label {
-        font-size: 0.9em;           /* smaller than category name */
-        text-align: left;
-        margin-left: 12px;
-        margin-top: 14px;
-        margin-bottom: 4px;
-        font-weight: 500;
-        opacity: 0.8;
-      }
     }
   </style>
 </head>
