Zima polaris content added

--- a/src/side-channel-trace-viewer.html
+++ b/src/side-channel-trace-viewer.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
+
     <div class="hero">
+      <div class="hero-text">
         <h1>Side channel trace viewer</h1>
+      </div>
     </div>
 
     <div class="container">
