--- a/src/drop-off-duty.html
+++ b/src/drop-off-duty.html
@@ -55,57 +55,16 @@
             font-weight: 600;
             color: #333;
         }
-
-        .trailer-section {
-            max-width: 600px;
-            margin: 30px auto;
-            padding: 20px;
-            border-radius: 12px;
-            color: #eee;
-            text-align: center;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        .trailer-section h2 {
-            margin-bottom: 15px;
-            font-weight: 700;
-            font-size: 1.8rem;
-            color: #000000;
-        }
-
-        .trailer-container {
-            width: 100%;
-            aspect-ratio: 16 / 9;
-            border: 6px solid #000;
-            border-radius: 8px;
-            overflow: hidden;
-            background-color: #000;
-            margin-bottom: 12px;
-        }
-
-        .trailer-container iframe {
-            width: 100%;
-            height: 100%;
-            display: block;
-            border: none;
-        }
-
-        .youtube-link a {
-            color: #f0a500;
-            font-weight: 600;
-            text-decoration: none;
-        }
-
-        .youtube-link a:hover,
-        .youtube-link a:focus {
-            text-decoration: underline;
-        }
     </style>
 </head>
 <body>
+
     <div class="hero">
+      <img src="../images/Drop-Off Duty/GameIcon.png" alt="Logo" class="logo">
+      <div class="hero-text">
         <h1>Drop-Off Duty</h1>
         <p>3D time trial driving and shooting video game.</p>
+      </div>
     </div>
 
     <section class="trailer-section" aria-label="Game Trailer">
@@ -124,12 +83,21 @@
     </section>
 
     <div class="tech-used">
+        <h3 style="margin-top: 0;">Team</h3>
+        <p>5 Programmers</p>
+    </div>
+
+    <div class="tech-used">
         <h3 style="margin-top: 0;">Technology Used</h3>
         <div class="tech-icons">
             <img src="../images/icons/cpp.png" alt="C++" />
             <img src="../images/icons/opengl.png" alt="OpenGL" />
             <span class="tech-badge">GLSL</span>
         </div>
+    </div>
+
+    <div class="tech-used">
+        <h3 style="margin-top: 0;">My contributions</h3>
     </div>
 
     <div class="container">
