Drop-Off Duty section added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Favicons -->
   <link href="assets/images/icons/favicon.png" rel="icon">
-  <link href="assets/images/icons/favicon.png rel="apple-touch-icon">
+  <link href="assets/images/icons/favicon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -365,7 +365,7 @@
                 <h4>Drop-Off Duty</h4>
                 <p>3D time trial driving and shooting video game.</p>
                 <a href="assets/images/Drop-Off Duty/Poster.png" data-gallery="portfolio-gallery-games" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="javascript:void(0)" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="drop-off-duty.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
         
