Removing some videos

--- a/drop-off-duty.html
+++ b/drop-off-duty.html
@@ -169,10 +169,9 @@
     <section id="graphics-engine" class="portfolio-details section">
       <div class="container" data-aos="fade-up">
         <h2>Graphics Engine</h2>
-        <p>The graphics engine behind <strong>Drop-Off Duty</strong> supports advanced lighting and custom shaders.</p>
+        <p>The graphics engine behind <strong>Drop-Off Duty</strong> supports custom shaders, advanced deferred shading and post-proccesing effects. It also features an instance rendered particle system.</p>
 
         <div class="portfolio-details-slider swiper init-swiper mt-4 position-relative">
-          <div class="slider-section-title">Shaders</div>
           <script type="application/json" class="swiper-config">
             {
               "loop": true,
@@ -224,7 +223,6 @@
         </div>
 
         <div class="portfolio-details-slider swiper init-swiper mt-3">
-          <div class="slider-section-title">Deferred Shading</div>
           <script type="application/json" class="swiper-config">
             {
               "loop": true,
@@ -246,32 +244,12 @@
 
             <div class="swiper-slide">
               <img src="assets/images/Drop-Off Duty/final_image.png" alt="">
-              <div class="image-hover-title">Final Image</div>
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/images/Drop-Off Duty/Deferred_result.png" alt="">
-              <div class="image-hover-title">Shaded</div>
+              <div class="image-hover-title">Deferred Shading</div>
             </div>
 
             <div class="swiper-slide">
               <img src="assets/images/Drop-Off Duty/Deferred_color.png" alt="">
-              <div class="image-hover-title">Color</div>
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/images/Drop-Off Duty/Deferred_normals.png" alt="">
-              <div class="image-hover-title">Normals</div>
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/images/Drop-Off Duty/Deferred_spec.png" alt="">
-              <div class="image-hover-title">Specular</div>
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/images/Drop-Off Duty/Deferred_emmisive.png" alt="">
-              <div class="image-hover-title">Emmisive</div>
+              <div class="image-hover-title">Unlit</div>
             </div>
 
           </div>
@@ -281,7 +259,6 @@
         </div>
 
         <div class="portfolio-details-slider swiper init-swiper mt-3">
-          <div class="slider-section-title">Post-processing Effects</div>
           <script type="application/json" class="swiper-config">
             {
               "loop": true,
@@ -307,11 +284,6 @@
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/images/Drop-Off Duty/emissiveBlurred.png" alt="">
-              <div class="image-hover-title">Emmisive Bloom</div>
-            </div>
-
-            <div class="swiper-slide">
               <img src="assets/images/Drop-Off Duty/ssao.png" alt="">
               <div class="image-hover-title">SSAO</div>
             </div>
@@ -328,7 +300,6 @@
         </div>
 
         <div class="portfolio-details-slider swiper init-swiper mt-3">
-          <div class="slider-section-title">Particle System</div>
           <script type="application/json" class="swiper-config">
             {
               "loop": true,
