--- a/index.html
+++ b/index.html
@@ -218,20 +218,11 @@
 
             <!-- Networking -->
             <div class="skills-group mb-4">
-              <h3>Networking</h3>
+              <h3>Networking Protocols</h3>
               <div class="progress">
                 <span class="skill">
                   <span class="skill-icon-placeholder"></span>
-                  <span>TCP</span> <i class="val">Intermediate</i>
-                </span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-              <div class="progress">
-                <span class="skill">
-                  <span class="skill-icon-placeholder"></span>
-                  <span>UDP</span> <i class="val">Intermediate</i>
+                  <span>TCP/IP</span> <i class="val">Intermediate</i>
                 </span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
