Acc data structs

--- a/crowd-sim.html
+++ b/crowd-sim.html
@@ -37,11 +37,7 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#demo"><i class="bi bi-play-circle navicon"></i><span>Demo</span></a></li>
-        <li><a href="#simulation-engine"><i class="bi bi-cpu navicon"></i><span>Simulation Engine</span></a></li>
-        <li><a href="#tools"><i class="bi bi-terminal navicon"></i><span>Tools</span></a></li>
-        <li><a href="#visuals"><i class="bi bi-image navicon"></i><span>Visuals</span></a></li>
-        <li><a href="#algorithms"><i class="bi bi-diagram-3 navicon"></i><span>Algorithms</span></a></li>
+        <li><a href="#overview"><i class="bi bi-house-door navicon"></i><span>Overview</span></a></li>
       </ul>
     </nav>
 
