UE icon updated

--- a/crowd-sim.html
+++ b/crowd-sim.html
@@ -139,7 +139,7 @@
                   <strong>Tech Used</strong>
                   <div class="tech-icons">
                     <img src="assets/images/icons/cpp.png" alt="C++" class="skill-icon">
-                    <img src="assets/images/icons/ue.png" alt="Unreal Engine" class="skill-icon">
+                    <img src="assets/images/icons/UE.png" alt="Unreal Engine" class="skill-icon">
                   </div>
                 </li>
 
