--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
               <div class="portfolio-info">
                 <h4>Uniform Grid</h4>
                 <a href="assets/images/AccStructs/UniformGrid.png" data-gallery="portfolio-gallery-uniform-grid" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="javascript:void(0)" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="acc-data-structs.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
 
