--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                 <a href="assets/images/ModelInspector/Mercedes300SL_Back.png" data-gallery="gallery-model-inspector" class="glightbox preview-link" style="display:none;"></a>
                 <a href="assets/images/ModelInspector/Mercedes300SL_Side.png" data-gallery="gallery-model-inspector" class="glightbox preview-link" style="display:none;"></a>
             
-                <a href="acc-data-structs.html" title="More Details" class="details-link">
+                <a href="javascript:void(0)" title="More Details" class="details-link">
                   <i class="bi bi-link-45deg"></i>
                 </a>
               </div>
