CPU ray tracer realease added

--- a/cpu_ray-tracer_photon-mapper.html
+++ b/cpu_ray-tracer_photon-mapper.html
@@ -182,6 +182,19 @@
                   </div>
                 </li>
 
+                <!-- GitHub -->
+                <li>
+                  <span class="tech-icons">
+                    <strong>GitHub</strong>
+                    <a href="https://github.com/oihan-az/CPU-Ray-Tracer---Photon-Mapper/releases/tag/v1.0" 
+                       target="_blank" 
+                       rel="noopener noreferrer" 
+                       aria-label="GitHub Repository">
+                      <i class="bi bi-github"></i>
+                    </a>
+                  </span>
+                </li>
+
                 <!-- Project Paper Button -->
                 <li>
                   <a href="assets/docs/RayTracerCPU/Report.pdf" target="_blank" class="btn-visit align-self-start">View Paper</a>
