Vulkan model inspector

--- a/index.html
+++ b/index.html
@@ -628,8 +628,7 @@
                 <a href="assets/images/ModelInspector/Mercedes300SL_Back.png" data-gallery="gallery-model-inspector" class="glightbox preview-link" style="display:none;"></a>
                 <a href="assets/images/ModelInspector/Mercedes300SL_Side.png" data-gallery="gallery-model-inspector" class="glightbox preview-link" style="display:none;"></a>
             
-                <a href="javascript:void(0)" title="More Details" class="details-link">
-                  <i class="bi bi-link-45deg"></i>
+                <a href="vulkan-model-inspector.html" title="More Details" class="details-link"> <i class="bi bi-link-45deg"></i>
                 </a>
               </div>
             </div>
